# LearnD3d12

./: .clang-tidy  .gitattributes  .gitmodules  CMakeLists.txt  README.md
shader/braynzar_constant_buffers/: vertex_shader.hlsl
src/: main.cpp
src/application/: application.cpp  application.h  glfw_application.cpp  glfw_application.h  win32_application.cpp  win32_application.h
src/logging/: log_macros.h  log_manager.cpp  log_manager.h
src/renderer/: braynzar_constant_buffers.cpp  braynzar_constant_buffers.h  d3d12_helper.h  d3d12_renderer.cpp  d3d12_renderer.h  hello_triangle.cpp  hello_triangle.h
